# death-riddle

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  COMPLETION.md  FEATURES.md  PLATFORMER_CHANGES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  SPRITE_UPGRADE.md  build.sh
assets/: ICON_PLACEHOLDER.txt
include/: AnimatedSprite.h  AnimationManager.h  DialogueWidget.h  Enemy.h  GameMaster.h  GameState.h  GameWidget.h  HealthBarWidget.h  Level.h  MainWindow.h  Player.h  Player2D.h  PlayerWidget.h  Riddle.h  SaveManager.h  Story.h
resources/: resources.qrc
resources/styles/: main.qss
src/: AnimatedSprite.cpp  AnimationManager.cpp  DialogueWidget.cpp  Enemy.cpp  GameMaster.cpp  GameState.cpp  GameWidget.cpp  GameWidget.cpp.backup  HealthBarWidget.cpp  Level.cpp  MainWindow.cpp  Player.cpp  Player2D.cpp  PlayerWidget.cpp  Riddle.cpp  SaveManager.cpp  Story.cpp  main.cpp
